--- a/house-clean.html
+++ b/house-clean.html
@@ -118,8 +118,8 @@
                     <td>Bedroom R</td>
                     <td>6</td>
                     <td>-</td>
-                    <td>-</td>
-                    <td></td>
+                    <td>Apr 2022</td>
+                    <td>Mould at bottom</td>
                 </tr>
                 <tr>
                     <td>Bedroom C</td>
@@ -171,7 +171,7 @@
                 <tr>
                     <td>Living room front window</td>
                     <td>Mar 2022</td>
-                    <td>Mould patches on 2 curtain</td>
+                    <td>Mould patches on 2 of 3 curtains</td>
                 </tr>
                 <tr>
                     <td class="subheading" colspan="3">Upstairs</td>
