--- a/year.html
+++ b/year.html
@@ -41,7 +41,7 @@
 
         <h2 class="season-spring">Mar - early spring</h2>
         <ul class="no-dots">
-            <li><input type="checkbox" />mow lawn</li>
+            <li><input type="checkbox" checked />mow lawn</li>
             <li><input type="checkbox" checked />mulch Rhubarb</li>
             <li><input type="checkbox" />mulch &amp; tidy strawberries</li>
         </ul>
@@ -74,7 +74,7 @@
         </ul>
         <h3>Prune</h3>
         <ul class="no-dots">
-            <li><input type="checkbox" />Rosemary</li>
+            <li><input type="checkbox" checked />Rosemary</li>
         </ul>
 
         <h2 class="season-summer">June - early summer</h2>
