--- a/house-clean.html
+++ b/house-clean.html
@@ -160,8 +160,8 @@
                 </tr>
                 <tr>
                     <td>Dining room side window</td>
-                    <td>-</td>
-                    <td></td>
+                    <td>Apr 2022</td>
+                    <td>Mould patches at bottom</td>
                 </tr>
                 <tr>
                     <td>Living room side window</td>
@@ -188,7 +188,7 @@
                 </tr>
                 <tr>
                     <td>Bedroom R</td>
-                    <td>Nov 2021</td>
+                    <td>-</td>
                     <td>New Nov 2021</td>
                 </tr>
                 <tr>
