--- a/lavender.html
+++ b/lavender.html
@@ -15,11 +15,20 @@
 
         <h2>Prune</h2>
         <ul>
-            <li>late summer: trim to tidy after flowering</li>
-            <li>early spring: prune to shape </li>
+            <li>late summer / Aug: trim to tidy after flowering</li>
+            <li>early spring / Mar: prune to shape </li>
             <li>don't prune to hard wood as won't regrow</li>
             <li>replace untidy plants from seedlings</li>
         </ul>
+
+        <h2>2022</h2>
+        <h3>Apr 2022</h3>
+        <ul>
+            <li>Seedlings moved and repotted</li>
+        </ul>
+        <img src="images/lavender1.jpg" />
+        <img src="images/lavender2.jpg" />
+
     </div>
 </body>
 
