--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             </li>
             <li><a href="rhubarb.html">Rhubarb</a></li>
             <li><a href="strawberries.html">Strawberries</a></li>
+            <li><a href="raspberries.html">Raspberries</a></li>
 
             <li>
                 <h2>Shrubs</h2>
@@ -62,6 +63,7 @@
             <li><a href="crocus.html">Crocuses</a></li>
             <li><a href="daffodils.html">Daffodils</a></li>
             <li><a href="snowdrops.html">Snowdrops</a></li>
+            <li><a href="fritillary.html">Fritillary</a></li>
 
             <li>
                 <h2>Flowers</h2>
