--- a/fritillary.html
+++ b/fritillary.html
@@ -21,6 +21,8 @@
         <h2>2022</h2>
         <h3>Apr 2022</h3>
         <img src="images/fritillary1.jpg" />
+        <img src="images/fritillary2.jpg" />
+        <img src="images/fritillary3.jpg" />
 
     </div>
 </body>
