--- a/house-clean.html
+++ b/house-clean.html
@@ -20,21 +20,22 @@
 
         <hr class="mt-5">
 
+        <!-- Cleaning -->
         <h2>Cleaning</h2>
         <h3>Utility room</h3>
         <ul>
-            <li>Mar 2022 mould in cupboard</li>
-            <li>Mar 2022 mould behind and under shoe racks and dryer</li>
+            <li class="cleaned">Mar 2022 mould in cupboard</li>
+            <li class="cleaned">Mar 2022 mould behind and under shoe racks and dryer</li>
         </ul>
         <h3>Dining room</h3>
         <ul>
-            <li>Feb 2022 behind outer wall bookshelves</li>
-            <li>behind inner wall bookshelves</li>
+            <li class="cleaned">Feb 2022 behind outer wall bookshelves</li>
+            <li class="todo">behind inner wall bookshelves</li>
         </ul>
         <h3>Living room</h3>
         <ul>
-            <li>Mar 2022 mould behind sideboard &amp; TV</li>
-            <li>Behind sofas</li>
+            <li class="cleaned">Mar 2022 mould behind sideboard &amp; TV</li>
+            <li class="todo">Behind sofas</li>
         </ul>
 
         <hr class="mt-5">
@@ -45,19 +46,20 @@
         </ul>
         <h3>Upstairs</h3>
         <ul>
-            <li>Mar 2022 all windows</li>
-            <li>Mar 2022 mould above D window</li>
-            <li>Mar 2022 mould above C window</li>
+            <li class="cleaned">Mar 2022 all windows</li>
+            <li class="cleaned">Mar 2022 mould above D window</li>
+            <li class="cleaned">Mar 2022 mould above C window</li>
         </ul>
         <h3>Downstairs</h3>
         <ul>
-            <li>Mar 2022 mould around living room windows</li>
-            <li>Mar 2022 mould above kitchen window</li>
-            <li>Feb 2022 mould above dining window and on ceiling</li>
+            <li class="cleaned">Mar 2022 mould around living room windows</li>
+            <li class="cleaned">Mar 2022 mould above kitchen window</li>
+            <li class="cleaned">Feb 2022 mould above dining window and on ceiling</li>
         </ul>
 
         <hr class="mt-5">
 
+        <!-- Blinds -->
         <h2>Blinds</h2>
         <ul>
             <li>6ft blinds must be sprayed and rinsed outside on line</li>
@@ -76,21 +78,21 @@
                 <tr>
                     <td class="subheading" colspan="5">Downstairs</td>
                 </tr>
-                <tr>
+                <tr class="cleaned">
                     <td>Utility</td>
                     <td>3</td>
                     <td>-</td>
                     <td>Feb 2022</td>
                     <td>Minor mould patches</td>
                 </tr>
-                <tr>
+                <tr class="cleaned">
                     <td>Kitchen</td>
                     <td>6</td>
                     <td>Nov 2020</td>
-                    <td>-</td>
+                    <td>Apr 2022</td>
                     <td></td>
                 </tr>
-                <tr>
+                <tr class="cleaned">
                     <td>Toilet</td>
                     <td>3</td>
                     <td>-</td>
@@ -100,28 +102,28 @@
                 <tr>
                     <td class="subheading" colspan="5">Upstairs</td>
                 </tr>
-                <tr>
+                <tr class="cleaned">
                     <td>Bedroom D</td>
                     <td>6</td>
                     <td>-</td>
                     <td>Mar 2022</td>
                     <td>Mould patches throughout. Sprayed mould patches</td>
                 </tr>
-                <tr>
+                <tr class="cleaned">
                     <td>Bedroom J</td>
                     <td>6</td>
                     <td>-</td>
                     <td>Mar 2022</td>
                     <td>Mould patches throughout</td>
                 </tr>
-                <tr>
+                <tr class="cleaned">
                     <td>Bedroom R</td>
                     <td>6</td>
                     <td>-</td>
                     <td>Apr 2022</td>
                     <td>Mould at bottom</td>
                 </tr>
-                <tr>
+                <tr class="cleaned">
                     <td>Bedroom C</td>
                     <td>6</td>
                     <td>Nov 2021</td>
@@ -133,6 +135,7 @@
 
         <hr class="mt-5">
 
+        <!-- Curtains -->
         <h2>Curtains</h2>
         <ol>
             <li>spray mould patches with bleach on both sides of lining</li>
@@ -153,22 +156,22 @@
                 <tr>
                     <td class="subheading" colspan="3">Downstairs</td>
                 </tr>
-                <tr>
+                <tr class="todo">
                     <td>Dining room patio doors</td>
-                    <td>-</td>
+                    <td class="todo">-</td>
                     <td></td>
                 </tr>
-                <tr>
+                <tr class="cleaned">
                     <td>Dining room side window</td>
                     <td>Apr 2022</td>
                     <td>Mould patches at bottom</td>
                 </tr>
-                <tr>
+                <tr class="cleaned">
                     <td>Living room side window</td>
                     <td>Mar 2022</td>
                     <td>No mould</td>
                 </tr>
-                <tr>
+                <tr class="cleaned">
                     <td>Living room front window</td>
                     <td>Mar 2022</td>
                     <td>Mould patches on 2 of 3 curtains</td>
@@ -176,22 +179,22 @@
                 <tr>
                     <td class="subheading" colspan="3">Upstairs</td>
                 </tr>
-                <tr>
+                <tr class="cleaned">
                     <td>Bedroom D</td>
                     <td>Mar 2022</td>
                     <td>Mould patches at bottom of lining</td>
                 </tr>
-                <tr>
+                <tr class="cleaned">
                     <td>Bedroom J</td>
                     <td>Mar 2022</td>
                     <td>Minor mould patches at bottom of lining</td>
                 </tr>
-                <tr>
+                <tr class="cleaned">
                     <td>Bedroom R</td>
                     <td>-</td>
                     <td>New Nov 2021</td>
                 </tr>
-                <tr>
+                <tr class="cleaned">
                     <td>Bedroom C</td>
                     <td>Mar 2022</td>
                     <td>No mould</td>
