--- a/raspberries.html
+++ b/raspberries.html
@@ -13,6 +13,11 @@
 
         <h1>Raspberries</h1>
 
+        <h2>Care</h2>
+        <ul>
+            <li>move seedlings early spring / Mar before grow too large</li>
+        </ul>
+
         <h2>2022</h2>
         <h3>Apr 2022</h3>
         <ul>
