--- a/year.html
+++ b/year.html
@@ -13,21 +13,22 @@
 
         <h1>Year</h1>
 
+        <!-- Jan -->
         <h2 class="season-winter">Jan - mid winter</h2>
-        <ul>
-            <li>weeding & tidying</li>
+        <ul class="no-dots">
+            <li><input type="checkbox" checked />weeding & tidying</li>
+            <li><input type="checkbox" checked />fill spare water butt</li>
         </ul>
         <h3>Prune</h3>
         <ul class="no-dots">
             <li><input type="checkbox" checked />Trees</li>
         </ul>
 
+        <!-- Feb -->
         <h2 class="season-winter">Feb - late winter</h2>
-        <ul>
-            <li>weeding & tidying</li>
-        </ul>
         <ul class="no-dots">
-            <li><input type="checkbox" />mulch raised beds</li>
+            <li><input type="checkbox" checked />weeding & tidying</li>
+            <li><input type="checkbox" checked />mulch raised beds</li>
         </ul>
         <h3>Prune</h3>
         <ul class="no-dots">
@@ -39,11 +40,12 @@
             <li><input type="checkbox" checked />Roses</li>
         </ul>
 
+        <!-- Mar -->
         <h2 class="season-spring">Mar - early spring</h2>
         <ul class="no-dots">
             <li><input type="checkbox" checked />mow lawn</li>
             <li><input type="checkbox" checked />mulch Rhubarb</li>
-            <li><input type="checkbox" />mulch &amp; tidy strawberries</li>
+            <li><input type="checkbox" />mulch &amp; move strawberries</li>
         </ul>
         <h3>Prune</h3>
         <ul class="no-dots">
@@ -60,7 +62,11 @@
             <li><input type="checkbox" checked />Asters</li>
         </ul>
 
+        <!-- Apr -->
         <h2 class="season-spring">Apr - mid spring</h2>
+        <ul class="no-dots">
+            <li><input type="checkbox" />mulch &amp; move raspberries</li>
+        </ul>
         <h3>Sew</h3>
         <ul class="no-dots">
             <li><input type="checkbox" />Chives</li>
@@ -77,12 +83,14 @@
             <li><input type="checkbox" checked />Rosemary</li>
         </ul>
 
+        <!-- Jun -->
         <h2 class="season-summer">June - early summer</h2>
         <h3>Move</h3>
         <ul class="no-dots">
             <li><input type="checkbox" />Anemone ranunculoides</li>
         </ul>
 
+        <!-- Oct -->
         <h2 class="season-autumn">Oct - mid autumn</h2>
         <h3>Plant</h3>
         <ul class="no-dots">
