--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <ul>
             <li><a href="seasons.html">Seasons</a></li>
             <li><a href="year.html">Year</a></li>
+            <li><a href="various.html">Various</a></li>
 
             <li>
                 <h2>Herbs</h2>
