--- a/year.html
+++ b/year.html
@@ -69,8 +69,8 @@
         </ul>
         <h3>Sew</h3>
         <ul class="no-dots">
-            <li><input type="checkbox" />Chives</li>
-            <li><input type="checkbox" />Parsely</li>
+            <li><input type="checkbox" checked />Chives</li>
+            <li><input type="checkbox" checked />Parsely</li>
             <li><input type="checkbox" />Dill</li>
             <li><input type="checkbox" />Rocket</li>
         </ul>
