--- a/house-clean.html
+++ b/house-clean.html
@@ -29,32 +29,37 @@
         </ul>
         <h3>Dining room</h3>
         <ul>
+            <li class="cleaned">Feb 2022 mould above window and on ceiling</li>
             <li class="cleaned">Feb 2022 behind outer wall bookshelves</li>
+            <li class="cleaned">Feb 2022 mould on patio doors</li>
             <li class="todo">behind inner wall bookshelves</li>
         </ul>
         <h3>Living room</h3>
         <ul>
-            <li class="cleaned">Mar 2022 mould behind sideboard &amp; TV</li>
-            <li class="todo">Behind sofas</li>
-        </ul>
-
-        <hr class="mt-5">
-
-        <h2>Doors &amp; windows</h2>
-        <ul>
-            <li>paint gaps with white radiator paint</li>
-        </ul>
-        <h3>Upstairs</h3>
-        <ul>
-            <li class="cleaned">Mar 2022 all windows</li>
-            <li class="cleaned">Mar 2022 mould above D window</li>
-            <li class="cleaned">Mar 2022 mould above C window</li>
-        </ul>
-        <h3>Downstairs</h3>
-        <ul>
             <li class="cleaned">Mar 2022 mould around living room windows</li>
+            <li class="cleaned">Mar 2022 mould behind sideboard &amp; TV</li>
+            <li class="todo">behind sofas</li>
+        </ul>
+        <h3>Kitchen</h3>
+        <ul>
             <li class="cleaned">Mar 2022 mould above kitchen window</li>
-            <li class="cleaned">Feb 2022 mould above dining window and on ceiling</li>
+        </ul>
+        <h3>D room</h3>
+        <ul>
+            <li class="cleaned">Apr 2022 mould on wall behind mattress</li>
+            <li class="cleaned">Mar 2022 mould above window</li>
+        </ul>
+        <h3>C room</h3>
+        <ul>
+            <li class="cleaned">Mar 2022 mould above window</li>
+        </ul>
+        <h3>R &amp; J room</h3>
+        <ul>
+            <li class="cleaned">Mar 2022 mould on windows</li>
+        </ul>
+        <h3>Bathroom</h3>
+        <ul>
+            <li class="cleaned">Feb 2022 whole room bleached and ceiling repainted</li>
         </ul>
 
         <hr class="mt-5">
