--- a/house-clean.html
+++ b/house-clean.html
@@ -38,7 +38,7 @@
         <ul>
             <li class="cleaned">Mar 2022 mould around living room windows</li>
             <li class="cleaned">Mar 2022 mould behind sideboard &amp; TV</li>
-            <li class="todo">behind sofas</li>
+            <li class="cleaned">Apr 2022 behind sofas</li>
         </ul>
         <h3>Kitchen</h3>
         <ul>
