--- a/year.html
+++ b/year.html
@@ -45,7 +45,7 @@
         <ul class="no-dots">
             <li><input type="checkbox" checked />mow lawn</li>
             <li><input type="checkbox" checked />mulch Rhubarb</li>
-            <li><input type="checkbox" />mulch &amp; move strawberries</li>
+            <li><input type="checkbox" checked />mulch &amp; move strawberries</li>
         </ul>
         <h3>Prune</h3>
         <ul class="no-dots">
@@ -65,14 +65,14 @@
         <!-- Apr -->
         <h2 class="season-spring">Apr - mid spring</h2>
         <ul class="no-dots">
-            <li><input type="checkbox" />mulch &amp; move raspberries</li>
+            <li><input type="checkbox" checked />mulch &amp; move raspberries</li>
         </ul>
         <h3>Sew</h3>
         <ul class="no-dots">
             <li><input type="checkbox" checked />Chives</li>
             <li><input type="checkbox" checked />Parsely</li>
-            <li><input type="checkbox" />Dill</li>
-            <li><input type="checkbox" />Rocket</li>
+            <li><input type="checkbox" checked />Dill</li>
+            <li><input type="checkbox" checked />Rocket</li>
         </ul>
         <h3>Plant</h3>
         <ul class="no-dots">
