--- a/house-clean.html
+++ b/house-clean.html
@@ -32,7 +32,7 @@
             <li class="cleaned">Feb 2022 mould above window and on ceiling</li>
             <li class="cleaned">Feb 2022 behind outer wall bookshelves</li>
             <li class="cleaned">Feb 2022 mould on patio doors</li>
-            <li class="todo">behind inner wall bookshelves</li>
+            <li class="cleaned">Apr 2022 behind inner wall bookshelves</li>
         </ul>
         <h3>Living room</h3>
         <ul>
