--- a/chives.html
+++ b/chives.html
@@ -26,6 +26,10 @@
         <h2>2022 Apr</h2>
         <p>Ready to harvest</p>
         <img src="images/chives1.jpg" />
+
+
+        <h2>2022 Apr 20</h2>
+        <p>Seeds sown</p>
     </div>
 </body>
 
