--- a/asters.html
+++ b/asters.html
@@ -20,7 +20,7 @@
         </ul>
 
         <h2>2022</h2>
-        <h3>Mar 2022</h3>
+        <h3>2022 Mar</h3>
         <ul>
             <li>half of large bunch split in 2 and replanted</li>
         </ul>
