--- a/bay.html
+++ b/bay.html
@@ -19,9 +19,8 @@
         </ul>
 
         <h2>2022</h2>
-        <h3>Mar 2022</h3>
+        <h3>2022 Mar</h3>
         <img src="images/bay1.jpg" />
-        <img src="images/bay2.jpg" />
 
     </div>
 </body>
