--- a/kale.html
+++ b/kale.html
@@ -21,14 +21,14 @@
 
         <h2>2020</h2>
 
-        <h3>20 Jul 2020</h3>
-        <img src="images/2020-07-20 kale.jpg" />
+        <h3>2020 Jul 20</h3>
+        <img src="images/kale3.jpg" />
 
-        <h3>25 Jul 2020</h3>
+        <h3>2020 Jul 25</h3>
         <img src="images/kale2.jpg" />
 
-        <h3>4 Sep 2020</h3>
-        <img src="2020-09-04 kale.jpg" />
+        <h3>2020 Sep 4</h3>
+        <img src="images/kale1.jpg" />
 
     </div>
 </body>
