--- a/raspberries.html
+++ b/raspberries.html
@@ -19,7 +19,7 @@
         </ul>
 
         <h2>2022</h2>
-        <h3>Apr 2022</h3>
+        <h3>2022 Apr</h3>
         <ul>
             <li>3 plants moved</li>
         </ul>
