--- a/anemone-ranunculoides.html
+++ b/anemone-ranunculoides.html
@@ -19,7 +19,7 @@
         </ul>
 
         <h2>2022</h2>
-        <h3>Mar 2022</h3>
+        <h3>2022 Mar</h3>
         <img src="images/anemone1.jpg" />
         <img src="images/anemone2.jpg" />
         <img src="images/anemone3.jpg" />
