--- a/chives.html
+++ b/chives.html
@@ -27,9 +27,11 @@
         <p>Ready to harvest</p>
         <img src="images/chives1.jpg" />
 
-
-        <h2>2022 Apr 20</h2>
-        <p>Seeds sown</p>
+        <h2>2022</h2>
+        <h3>2022 Apr 20</h3>
+        <p>Seeds sown in soil</p>
+        <h3>2022 May 18</h3>
+        <p>No seedlings yet</p>
     </div>
 </body>
 
