--- a/dill.html
+++ b/dill.html
@@ -19,16 +19,20 @@
             <li>1cm deep in rows 15cm apart</li>
             <li>Thin to 15cm apart (or 10cm if in pot)</li>
             <li>Hates having roots disturbed so do not move</li>
+            <li>Grows equally well in short and tall pots</li>
         </ul>
 
         <h2>2020</h2>
-        <h3>Sep 2020</h3>
+        <h3>2020 Sep</h3>
         <img src="images/dill1.jpg" />
 
-        <h2>2022 Apr 20</h2>
+        <h2>2022</h2>
+        <h3>Apr 20</h3>
         <p>Seeds sown</p>
+        <h3>May 2</h3>
+        <img src="images/dill2.jpg" />
 
-        
+
     </div>
 </body>
 
