--- a/fritillary.html
+++ b/fritillary.html
@@ -19,10 +19,8 @@
         </ul>
 
         <h2>2022</h2>
-        <h3>Apr 2022</h3>
+        <h3>2022 Apr</h3>
         <img src="images/fritillary1.jpg" />
-        <img src="images/fritillary2.jpg" />
-        <img src="images/fritillary3.jpg" />
 
     </div>
 </body>
