--- a/garlic.html
+++ b/garlic.html
@@ -14,7 +14,7 @@
         <h1>Garlic</h1>
 
         <h2>2022</h2>
-        <h3>Mar 2022</h3>
+        <h3>2022 Mar</h3>
         <ul>
             <li>Not certain these are all garlic</li>
             <li>Clumps separated by veg patch</li>
