--- a/mint.html
+++ b/mint.html
@@ -26,7 +26,7 @@
         </ul>
 
         <h2>2022</h2>
-        <h3>Mar 2022</h3>
+        <h3>2022 Mar</h3>
         <img src="images/mint1.jpg" />
 
     </div>
