--- a/rhubarb.html
+++ b/rhubarb.html
@@ -34,7 +34,7 @@
     </div>
 
     <h2>2022</h2>
-    <h3>Mar 2022</h3>
+    <h3>2022 Mar</h3>
     <ul>
         <li>Mulched with rotted manure</li>
     </ul>
@@ -42,7 +42,7 @@
 
 
     <h2>2021</h2>
-    <h3>Mar 2021</h3>
+    <h3>2021 Mar</h3>
     <ul>
         <li>Split 1 Glaucous Early into 4 plants</li>
         <li>Top 2 survived, other 2 didn't</li>
