--- a/rocket.html
+++ b/rocket.html
@@ -18,10 +18,12 @@
             <li></li>
         </ul>
 
-        <h2>2022 Apr 20</h2>
+        <h2>2022</h2>
+        <h3>2022 Apr 20</h3>
         <p>Seeds sown</p>
+        <h3>2022 May 2</h3>
+        <img src="images/rocket1.jpg" />
 
-        
     </div>
 </body>
 
