--- a/snowdrops.html
+++ b/snowdrops.html
@@ -19,7 +19,7 @@
         </ul>
 
         <h2>2022</h2>
-        <h3>Mar 2022</h3>
+        <h3>2022 Mar</h3>
         <ul>
             <li>Moved and split</li>
         </ul>
