--- a/thyme.html
+++ b/thyme.html
@@ -27,7 +27,7 @@
         </ul>
 
         <h2>2022</h2>
-        <h3>Mar 2022</h3>
+        <h3>2022 Mar</h3>
         <ul>
             <li>Planted, very pot-bound</li>
         </ul>
