--- a/bay.html
+++ b/bay.html
@@ -21,7 +21,8 @@
         <h2>2022</h2>
         <h3>2022 Mar</h3>
         <img src="images/bay1.jpg" />
-
+        <h3>2022 May 18</h3>
+        <img src="images/bay2.jpg" />
     </div>
 </body>
 
