--- a/sage.html
+++ b/sage.html
@@ -28,9 +28,10 @@
         <h2>2022</h2>
         <h3>2022 Mar</h3>
         <ul>
-            <li>Pruned and runner replanted</li>
+            <li>Pruned</li>
         </ul>
         <img src="images/sage1.jpg" />
+        <h3>2022 May 18</h3>
         <img src="images/sage2.jpg" />
 
     </div>
