--- a/dill.html
+++ b/dill.html
@@ -31,7 +31,8 @@
         <p>Seeds sown</p>
         <h3>May 2</h3>
         <img src="images/dill2.jpg" />
-
+        <h3>May 18</h3>
+        <img src="images/dill3.jpg" />
 
     </div>
 </body>
