--- a/parsley.html
+++ b/parsley.html
@@ -16,11 +16,14 @@
         <h2>Planting</h2>
         <ul>
             <li>Sew Mar-Jul</li>
+            <li>thin when 5 cm tall to 10 cm distance in pots</li>
         </ul>
 
         <h2>2022</h2>
         <h3>2022 Apr 20</h3>
-        <p>Seeds sown</p>
+        <p>Seeds sown in large pot outside</p>
+        <h3>2022 May 18</h3>
+        <img src="images/parsley1.jpg" />
 
 
     </div>
