--- a/chives.html
+++ b/chives.html
@@ -32,6 +32,10 @@
         <p>Seeds sown in soil</p>
         <h3>2022 May 18</h3>
         <p>No seedlings yet</p>
+        <h3>2022 May 22</h3>
+        <p>Seeds sown in tray</p>
+        <img src="images/chives2.jpg" />
+
     </div>
 </body>
 
