--- a/various.html
+++ b/various.html
@@ -30,6 +30,14 @@
         <ul>
             <li>Don't dig in mulch, leave covering surface to suppress weeds</li>
         </ul>
+
+        <h2>Potting</h2>
+        <ul>
+            <li>Sieve compost in large container</li>
+            <li>Mix with perlite</li>
+        </ul>
+        <img src="images/potting1.jpg" />
+
     </div>
 </body>
 
