--- a/dill.html
+++ b/dill.html
@@ -29,10 +29,12 @@
         <h2>2022</h2>
         <h3>Apr 20</h3>
         <p>Seeds sown</p>
-        <h3>May 2</h3>
+        <h3>May 2 - 12 days</h3>
         <img src="images/dill2.jpg" />
-        <h3>May 18</h3>
+        <h3>May 18 - 28 days</h3>
         <img src="images/dill3.jpg" />
+        <h3>Jun 2 - 43 days</h3>
+        <img src="images/dill4.jpg" />
 
     </div>
 </body>
