--- a/rocket.html
+++ b/rocket.html
@@ -15,14 +15,17 @@
 
         <h2>Planting</h2>
         <ul>
-            <li></li>
+            <li>no good leaves if grow outdoors in beds</li>
+            <li>need to grow in container</li>
         </ul>
 
         <h2>2022</h2>
         <h3>2022 Apr 20</h3>
         <p>Seeds sown</p>
-        <h3>2022 May 2</h3>
+        <h3>2022 May 2 - 12 days</h3>
         <img src="images/rocket1.jpg" />
+        <h3>2022 Jun 1 - 43 days</h3>
+        <img src="images/rocket2.jpg" />
 
     </div>
 </body>
