--- a/parsley.html
+++ b/parsley.html
@@ -22,9 +22,10 @@
         <h2>2022</h2>
         <h3>2022 Apr 20</h3>
         <p>Seeds sown in large pot outside</p>
-        <h3>2022 May 18</h3>
+        <h3>2022 May 18 - 28 days</h3>
         <img src="images/parsley1.jpg" />
-
+        <h3>2022 Jun 2 - 43 days</h3>
+        <img src="images/parsley2.jpg" />
 
     </div>
 </body>
