--- a/bay.html
+++ b/bay.html
@@ -23,6 +23,8 @@
         <img src="images/bay1.jpg" />
         <h3>2022 May 18</h3>
         <img src="images/bay2.jpg" />
+        <h3>2022 Jul 8</h3>
+        <img src="images/bay3.jpg" />
     </div>
 </body>
 
