--- a/dill.html
+++ b/dill.html
@@ -23,10 +23,16 @@
         </ul>
 
         <h2>2020</h2>
+        <ul>
+            <li>Grew well all season</li>
+        </ul>
         <h3>2020 Sep</h3>
         <img src="images/dill1.jpg" />
 
         <h2>2022</h2>
+        <ul>
+            <li>Grew well initially but ravaged by aphids</li>
+        </ul>
         <h3>Apr 20</h3>
         <p>Seeds sown</p>
         <h3>May 2 - 12 days</h3>
@@ -35,7 +41,9 @@
         <img src="images/dill3.jpg" />
         <h3>Jun 2 - 43 days</h3>
         <img src="images/dill4.jpg" />
-
+        <h3>Jul 8</h3>
+        <img src="images/dill5.jpg" />
+        <img src="images/dill6.jpg" />
     </div>
 </body>
 
