--- a/mint.html
+++ b/mint.html
@@ -17,20 +17,23 @@
         <ul>
             <li>best grown in pot so does not compete with other plants</li>
             <li>or plant in bottomless bucket in ground</li>
+            <li>regularly harvest to keep leaves good quality</li>
         </ul>
 
         <h2>Prune</h2>
         <ul>
+            <li>cut back half to ground level if need to revive mid-season</li>
             <li>cut back to ground level in autumn / Oct</li>
             <li>divide in autumn / Oct, discard centre and use outer roots</li>
         </ul>
 
         <h2>2022</h2>
-        <h3>2022 Mar</h3>
+        <h3>Mar</h3>
         <img src="images/mint1.jpg" />
-        <h3>2022 May 18</h3>
+        <h3>May 18</h3>
         <img src="images/mint2.jpg" />
-
+        <h3>Jul 8</h3>
+        <img src="images/mint3.jpg" />
     </div>
 </body>
 
