--- a/parsley.html
+++ b/parsley.html
@@ -20,13 +20,14 @@
         </ul>
 
         <h2>2022</h2>
-        <h3>2022 Apr 20</h3>
+        <h3>Apr 20</h3>
         <p>Seeds sown in large pot outside</p>
-        <h3>2022 May 18 - 28 days</h3>
+        <h3>May 18 - 28 days</h3>
         <img src="images/parsley1.jpg" />
-        <h3>2022 Jun 2 - 43 days</h3>
+        <h3>Jun 2 - 43 days</h3>
         <img src="images/parsley2.jpg" />
-
+        <h3>Jul 8</h3>
+        <img src="images/parsley3.jpg" />
     </div>
 </body>
 
