--- a/sage.html
+++ b/sage.html
@@ -33,7 +33,8 @@
         <img src="images/sage1.jpg" />
         <h3>2022 May 18</h3>
         <img src="images/sage2.jpg" />
-
+        <h3>2022 Jul 8</h3>
+        <img src="images/sage3.jpg" />
     </div>
 </body>
 
