--- a/parsley.html
+++ b/parsley.html
@@ -26,8 +26,12 @@
         <img src="images/parsley1.jpg" />
         <h3>Jun 2 - 43 days</h3>
         <img src="images/parsley2.jpg" />
-        <h3>Jul 8</h3>
+        <h3>Jul 8 - 79 days</h3>
         <img src="images/parsley3.jpg" />
+        <h3>Sep 8</h3>
+        <p>2nd sowing of year</p>
+        <img src="images/parsley4.jpg" />
+
     </div>
 </body>
 
