--- a/thyme.html
+++ b/thyme.html
@@ -28,11 +28,11 @@
 
         <h2>2022</h2>
         <h3>2022 Mar</h3>
-        <ul>
-            <li>Planted, very pot-bound</li>
-        </ul>
+        <p>Planted, very pot-bound</p>
         <img src="images/thyme1.jpg" />
-
+        <h3>2022 Sep</h3>
+        <p>All brown during summer but green again after rain</p>
+        <img src="images/thyme2.jpg" />
     </div>
 </body>
 
