--- a/lavender.html
+++ b/lavender.html
@@ -23,12 +23,12 @@
 
         <h2>2022</h2>
         <h3>Apr 2022</h3>
-        <ul>
-            <li>Seedlings moved and repotted</li>
-        </ul>
+        <p>Seedlings moved and repotted</p>
         <img src="images/lavender1.jpg" />
         <img src="images/lavender2.jpg" />
-
+        <h3>Sep 2022</h3>
+        <p>Seedlings planted out after 6 months in greenhouse, one plant dried out but recovered</p>
+        <img src="images/lavender3.jpg" />
     </div>
 </body>
 
