--- a/chives.html
+++ b/chives.html
@@ -29,9 +29,7 @@
 
         <h2>2022</h2>
         <h3>2022 Apr 20</h3>
-        <p>Seeds sown in soil</p>
-        <h3>2022 May 18</h3>
-        <p>No seedlings yet</p>
+        <p>Seeds sown in soil: none germinated</p>
         <h3>2022 May 22</h3>
         <p>Seeds sown in tray</p>
         <img src="images/chives2.jpg" />
