--- a/chives.html
+++ b/chives.html
@@ -31,8 +31,11 @@
         <h3>2022 Apr 20</h3>
         <p>Seeds sown in soil: none germinated</p>
         <h3>2022 May 22</h3>
-        <p>Seeds sown in tray</p>
+        <p>Seeds sown in tray (take long time to germinate)</p>
         <img src="images/chives2.jpg" />
+        <h3>2022 Sep 9</h3>
+        <p>Ready to be planted out</p>
+        <img src="images/chives3.jpg" />
 
     </div>
 </body>
