--- a/lavender.html
+++ b/lavender.html
@@ -29,6 +29,7 @@
         <h3>Sep 2022</h3>
         <p>Seedlings planted out after 6 months in greenhouse, one plant dried out but recovered</p>
         <img src="images/lavender3.jpg" />
+        <img src="images/lavender4.jpg" />
     </div>
 </body>
 
