--- a/wild-flowers.html
+++ b/wild-flowers.html
@@ -16,8 +16,15 @@
         <h2>Stichwort</h2>
         <img src="images/stichwort1.jpg" />
 
+        <h2>Cranesbill</h2>
+        <img src="images/cranesbill1.jpg" />
+
+        <h2>Comfrey</h2>
+        <img src="images/comfrey1.jpg" />
+
         <h2>Red campion</h2>
         <img src="images/red-campion1.jpg" />
+        <img src="images/red-campion2.jpg" />
 
         <h2>Garlic mustard</h2>
         <img src="images/garlic-mustard1.jpg" />
