--- a/house-clean.html
+++ b/house-clean.html
@@ -13,10 +13,12 @@
 
         <h1>Cleaning</h1>
 
-        <ul>
-            <li>spray bleach onto sponge in bucket then apply</li>
-            <li>leave bleach for 15 mins</li>
-        </ul>
+        <h2>Cleaning with bleach</h2>
+        <ol>
+            <li>Spray bleach (Cillit bang) onto sponge in bucket then apply</li>
+            <li>Leave bleach for 5-10 mins</li>
+            <li>Rinse with warm water</li>
+        </ol>
 
         <hr class="mt-5">
 
@@ -24,42 +26,43 @@
         <h2>Cleaning</h2>
         <h3>Utility room</h3>
         <ul>
-            <li class="cleaned">Mar 2022 mould in cupboard</li>
-            <li class="cleaned">Mar 2022 mould behind and under shoe racks and dryer</li>
+            <li class="todo">Mar 2022 mould in cupboard</li>
+            <li class="todo">Mar 2022 mould behind and under shoe racks and dryer</li>
+            <li class="todo">Shower room</li>
         </ul>
         <h3>Dining room</h3>
         <ul>
             <li class="cleaned">Feb 2022 mould above window and on ceiling</li>
-            <li class="cleaned">Feb 2022 behind outer wall bookshelves</li>
+            <li class="todo">Feb 2022 behind outer wall bookshelves</li>
             <li class="cleaned">Feb 2022 mould on patio doors</li>
-            <li class="cleaned">Apr 2022 behind inner wall bookshelves</li>
+            <li class="todo">Apr 2022 behind inner wall bookshelves</li>
         </ul>
         <h3>Living room</h3>
         <ul>
-            <li class="cleaned">Mar 2022 mould around living room windows</li>
-            <li class="cleaned">Mar 2022 mould behind sideboard &amp; TV</li>
+            <li class="todo">Mar 2022 mould around living room windows</li>
+            <li class="cleaned">Apr 2023 mould behind sideboard &amp; TV</li>
             <li class="cleaned">Apr 2022 behind sofas</li>
         </ul>
         <h3>Kitchen</h3>
         <ul>
-            <li class="cleaned">Mar 2022 mould above kitchen window</li>
+            <li class="cleaned">May 2023 mould above kitchen window</li>
         </ul>
         <h3>D room</h3>
         <ul>
-            <li class="cleaned">Apr 2022 mould on wall behind mattress</li>
-            <li class="cleaned">Mar 2022 mould above window</li>
+            <li class="todo">Apr 2022 mould on wall behind mattress</li>
+            <li class="cleaned">Apr 2023 mould above window</li>
         </ul>
         <h3>C room</h3>
         <ul>
-            <li class="cleaned">Mar 2022 mould above window</li>
+            <li class="todo">Mar 2022 mould above window</li>
         </ul>
         <h3>R &amp; J room</h3>
         <ul>
-            <li class="cleaned">Mar 2022 mould on windows</li>
+            <li class="cleaned">Apr 2023 mould on windows</li>
         </ul>
         <h3>Bathroom</h3>
         <ul>
-            <li class="cleaned">Feb 2022 whole room bleached and ceiling repainted</li>
+            <li class="todo">Feb 2022 whole room bleached and ceiling repainted</li>
         </ul>
 
         <hr class="mt-5">
@@ -83,7 +86,7 @@
                 <tr>
                     <td class="subheading" colspan="5">Downstairs</td>
                 </tr>
-                <tr class="cleaned">
+                <tr class="todo">
                     <td>Utility</td>
                     <td>3</td>
                     <td>-</td>
@@ -97,7 +100,7 @@
                     <td>Apr 2022</td>
                     <td></td>
                 </tr>
-                <tr class="cleaned">
+                <tr class="todo">
                     <td>Toilet</td>
                     <td>3</td>
                     <td>-</td>
@@ -111,8 +114,8 @@
                     <td>Bedroom D</td>
                     <td>6</td>
                     <td>-</td>
-                    <td>Mar 2022</td>
-                    <td>Mould patches throughout. Sprayed mould patches</td>
+                    <td>Mar 2023</td>
+                    <td>Mould patches at bottom. Sprayed mould patches, cleaned mould around windows</td>
                 </tr>
                 <tr class="cleaned">
                     <td>Bedroom J</td>
@@ -128,7 +131,7 @@
                     <td>Apr 2022</td>
                     <td>Mould at bottom</td>
                 </tr>
-                <tr class="cleaned">
+                <tr class="todo">
                     <td>Bedroom C</td>
                     <td>6</td>
                     <td>Nov 2021</td>
@@ -143,10 +146,10 @@
         <!-- Curtains -->
         <h2>Curtains</h2>
         <ol>
-            <li>spray mould patches with bleach on both sides of lining</li>
-            <li>leave bleach for 15 mins</li>
-            <li>rinse whole curtain in warm water</li>
-            <li>wash curtains at 30&deg;C handwash</li>
+            <li>Spray mould patches with bleach on both sides of lining</li>
+            <li>Leave bleach for 15 mins</li>
+            <li>Rinse whole curtain in warm water</li>
+            <li>Wash curtains at 30&deg;C handwash</li>
         </ol>
         <table class="curtains mt-3">
             <thead>
@@ -166,17 +169,17 @@
                     <td class="todo">-</td>
                     <td></td>
                 </tr>
-                <tr class="cleaned">
+                <tr class="todo">
                     <td>Dining room side window</td>
                     <td>Apr 2022</td>
                     <td>Mould patches at bottom</td>
                 </tr>
-                <tr class="cleaned">
+                <tr class="todo">
                     <td>Living room side window</td>
                     <td>Mar 2022</td>
                     <td>No mould</td>
                 </tr>
-                <tr class="cleaned">
+                <tr class="todo">
                     <td>Living room front window</td>
                     <td>Mar 2022</td>
                     <td>Mould patches on 2 of 3 curtains</td>
@@ -184,10 +187,10 @@
                 <tr>
                     <td class="subheading" colspan="3">Upstairs</td>
                 </tr>
-                <tr class="cleaned">
+                <tr class="no-clean-needed">
                     <td>Bedroom D</td>
-                    <td>Mar 2022</td>
-                    <td>Mould patches at bottom of lining</td>
+                    <td>Mar 2023</td>
+                    <td>No mould</td>
                 </tr>
                 <tr class="cleaned">
                     <td>Bedroom J</td>
@@ -207,7 +210,8 @@
             </tbody>
         </table>
 
-        <ul class="mt-3">
+        <h3 class="mt-3">Drying curtains</h3>
+        <ul>
             <li>hang sideways to dry</li>
         </ul>
         <img src="images/curtains1.jpg" />
