--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="year.html">Year</a></li>
             <li><a href="wild-flowers.html">Wild flowers</a></li>
             <li><a href="various.html">Various</a></li>
+            <li><a href="house-clean.html">House clean</a></li>
 
             <li>
                 <h2>Herbs</h2>
