--- a/house-clean.html
+++ b/house-clean.html
@@ -32,16 +32,16 @@
         </ul>
         <h3>Dining room</h3>
         <ul>
-            <li class="cleaned">Feb 2022 mould above window and on ceiling</li>
+            <li class="todo">Feb 2022 mould above window and on ceiling</li>
             <li class="todo">Feb 2022 behind outer wall bookshelves</li>
-            <li class="cleaned">Feb 2022 mould on patio doors</li>
+            <li class="todo">Feb 2022 mould on patio doors</li>
             <li class="todo">Apr 2022 behind inner wall bookshelves</li>
         </ul>
         <h3>Living room</h3>
         <ul>
-            <li class="todo">Mar 2022 mould around living room windows</li>
+            <li class="cleaned">May 2023 mould around living room windows &amp; on walls</li>
             <li class="cleaned">Apr 2023 mould behind sideboard &amp; TV</li>
-            <li class="cleaned">Apr 2022 behind sofas</li>
+            <li class="todo">Apr 2022 behind sofas</li>
         </ul>
         <h3>Kitchen</h3>
         <ul>
@@ -93,7 +93,7 @@
                     <td>Feb 2022</td>
                     <td>Minor mould patches</td>
                 </tr>
-                <tr class="cleaned">
+                <tr class="todo">
                     <td>Kitchen</td>
                     <td>6</td>
                     <td>Nov 2020</td>
@@ -117,14 +117,14 @@
                     <td>Mar 2023</td>
                     <td>Mould patches at bottom. Sprayed mould patches, cleaned mould around windows</td>
                 </tr>
-                <tr class="cleaned">
+                <tr class="todo">
                     <td>Bedroom J</td>
                     <td>6</td>
                     <td>-</td>
                     <td>Mar 2022</td>
                     <td>Mould patches throughout</td>
                 </tr>
-                <tr class="cleaned">
+                <tr class="todo">
                     <td>Bedroom R</td>
                     <td>6</td>
                     <td>-</td>
@@ -146,8 +146,9 @@
         <!-- Curtains -->
         <h2>Curtains</h2>
         <ol>
+            <li>Remove hooks or will come off in washing machine</li>
             <li>Spray mould patches with bleach on both sides of lining</li>
-            <li>Leave bleach for 15 mins</li>
+            <li>Leave bleach for 10-15 mins</li>
             <li>Rinse whole curtain in warm water</li>
             <li>Wash curtains at 30&deg;C handwash</li>
         </ol>
@@ -169,20 +170,20 @@
                     <td class="todo">-</td>
                     <td></td>
                 </tr>
-                <tr class="todo">
+                <tr class="cleaned">
                     <td>Dining room side window</td>
-                    <td>Apr 2022</td>
-                    <td>Mould patches at bottom</td>
-                </tr>
-                <tr class="todo">
-                    <td>Living room side window</td>
-                    <td>Mar 2022</td>
+                    <td>May 2023</td>
                     <td>No mould</td>
                 </tr>
-                <tr class="todo">
+                <tr class="cleaned">
+                    <td>Living room side window</td>
+                    <td>May 2023</td>
+                    <td>No mould</td>
+                </tr>
+                <tr class="cleaned">
                     <td>Living room front window</td>
-                    <td>Mar 2022</td>
-                    <td>Mould patches on 2 of 3 curtains</td>
+                    <td>May 2023</td>
+                    <td>No mould</td>
                 </tr>
                 <tr>
                     <td class="subheading" colspan="3">Upstairs</td>
@@ -192,17 +193,17 @@
                     <td>Mar 2023</td>
                     <td>No mould</td>
                 </tr>
-                <tr class="cleaned">
+                <tr class="todo">
                     <td>Bedroom J</td>
                     <td>Mar 2022</td>
                     <td>Minor mould patches at bottom of lining</td>
                 </tr>
-                <tr class="cleaned">
+                <tr class="no-clean-needed">
                     <td>Bedroom R</td>
                     <td>-</td>
                     <td>New Nov 2021</td>
                 </tr>
-                <tr class="cleaned">
+                <tr class="todo">
                     <td>Bedroom C</td>
                     <td>Mar 2022</td>
                     <td>No mould</td>
