--- a/house-clean.html
+++ b/house-clean.html
@@ -149,8 +149,8 @@
             <li>Remove hooks or will come off in washing machine</li>
             <li>Spray mould patches with bleach on both sides of lining</li>
             <li>Leave bleach for 10-15 mins</li>
-            <li>Rinse whole curtain in warm water</li>
-            <li>Wash curtains at 30&deg;C handwash</li>
+            <li>Rinse whole curtain with warm water</li>
+            <li>Wash curtains at 30&deg;C on handwash or synthetic for longer wash</li>
         </ol>
         <table class="curtains mt-3">
             <thead>
@@ -188,10 +188,10 @@
                 <tr>
                     <td class="subheading" colspan="3">Upstairs</td>
                 </tr>
-                <tr class="no-clean-needed">
+                <tr class="todo">
                     <td>Bedroom D</td>
                     <td>Mar 2023</td>
-                    <td>No mould</td>
+                    <td>Mould spots at bottom of lining</td>
                 </tr>
                 <tr class="todo">
                     <td>Bedroom J</td>
