--- a/wild-flowers.html
+++ b/wild-flowers.html
@@ -18,16 +18,27 @@
 
         <h2>Cranesbill</h2>
         <img src="images/cranesbill1.jpg" />
+        <img src="images/cranesbill2.jpg" />
 
         <h2>Comfrey</h2>
         <img src="images/comfrey1.jpg" />
 
         <h2>Red campion</h2>
         <img src="images/red-campion1.jpg" />
-        <img src="images/red-campion2.jpg" />
+        <img src="images/red-campion3.jpg" />
 
         <h2>Garlic mustard</h2>
         <img src="images/garlic-mustard1.jpg" />
+
+        <h2>Sun spurge</h2>
+        <img src="images/sun-spurge1.jpg" />
+
+        <h2>Shepherd's purse</h2>
+        <img src="images/shepherds-purse1.jpg" />
+
+        <h2>Dame's rocket</h2>
+        <p>Hesperis</p>
+        <img src="images/hesperis1.jpg" />
 
         <h2>Purple dead nettle</h2>
         <img src="images/purple-dead-nettle1.jpg" />
