--- a/house-clean.html
+++ b/house-clean.html
@@ -27,7 +27,7 @@
         <h3>Utility room</h3>
         <ul>
             <li class="todo">Mar 2022 mould in cupboard</li>
-            <li class="todo">Mar 2022 mould behind and under shoe racks and dryer</li>
+            <li class="cleaned">May 2023 mould behind and under shoe racks and dryer</li>
             <li class="todo">Shower room</li>
         </ul>
         <h3>Dining room</h3>
