--- a/house-clean.html
+++ b/house-clean.html
@@ -49,12 +49,12 @@
         </ul>
         <h3>D room</h3>
         <ul>
-            <li class="todo">Apr 2022 mould on wall behind mattress</li>
+            <li class="cleaned">May 2023 wall behind mattress</li>
             <li class="cleaned">Apr 2023 mould above window</li>
         </ul>
         <h3>C room</h3>
         <ul>
-            <li class="todo">Mar 2022 mould above window</li>
+            <li class="cleaned">May 2023 mould in corner</li>
         </ul>
         <h3>R &amp; J room</h3>
         <ul>
@@ -193,19 +193,19 @@
                     <td>Mar 2023</td>
                     <td>Mould spots at bottom of lining</td>
                 </tr>
-                <tr class="todo">
+                <tr class="cleaned">
                     <td>Bedroom J</td>
-                    <td>Mar 2022</td>
-                    <td>Minor mould patches at bottom of lining</td>
+                    <td>May 2023</td>
+                    <td>No mould</td>
                 </tr>
                 <tr class="no-clean-needed">
                     <td>Bedroom R</td>
                     <td>-</td>
                     <td>New Nov 2021</td>
                 </tr>
-                <tr class="todo">
+                <tr class="cleaned">
                     <td>Bedroom C</td>
-                    <td>Mar 2022</td>
+                    <td>May 2023</td>
                     <td>No mould</td>
                 </tr>
             </tbody>
